# eSIMKeywordAnalysis

./: .gitignore  README.md  pyproject.toml  shrimp-rules.md
.codex/: config.toml
.github/workflows/: deploy-pages.yml
config/: collection_profiles.yaml
docs/: dashboard_operations.md  dashboard_plan.md  github_pages_deployment.md  implementation_roadmap.md  public_dashboard_architecture.md  public_dashboard_operations.md  research_plan.md  seed_keyword_design.md  signal_usage_notes.md  validation_and_risks.md
outputs/: keyword_analysis.sqlite3  korea_focus_run.sqlite3  test_keyword_analysis.sqlite3
outputs/reports/: best_esim_for_korea_3f4a3be4-8feb-4c03-9176-ec63b71e814d.csv  best_esim_for_korea_445d7066-cda1-4d5c-ba47-59488cc33c59.csv  best_esim_for_korea_5295f868-eafc-4d6a-a7e3-75adb49c48c6.csv  best_esim_for_korea_5ba5fb1f-0614-4924-8bca-30bad37dc06f.csv  best_esim_for_korea_dfb7ae49-2ed2-4690-b599-1e5a4fd0569c.csv  esim_f41c4bc4-e5e7-4cd4-aae0-2a9cf634c83e.csv  esim_for_korea_362e4c5a-f0d2-4ce3-826c-bafddc64c1d5.csv  esim_for_korea_41f886cf-fc3c-47c9-8fab-6fe2af20a857.csv  esim_for_korea_4d6ffa22-bedd-40e0-a172-b5a50ef97ea7.csv  esim_for_korea_63590574-8730-4533-9775-896dfb2e58a0.csv  esim_for_korea_7df03198-142a-406a-9a21-399854dbc499.csv  (+33 more)
site/: app.js  index.html  styles.css
site/data/: dashboard_data.json  (+1 more)
tests/: test_config.py  test_dashboard_help.py  test_dashboard_publish.py  test_dashboard_publish_missing_snapshot.py  test_google_autocomplete.py  test_google_related_searches.py  test_keyword_quality.py  test_query_expansion.py  test_storage.py
(+33 files in other folders)
